ingress/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test.172.28.128.7.xip.io
    http:
      paths:
      - path: /ok
        backend:
          serviceName: ok-service
          servicePort: 80
      - path: /hello
        backend:
          serviceName: hello-service
          servicePort: 80
